--- a/infrastructure/aws/terraform.tfvars.template
+++ b/infrastructure/aws/terraform.tfvars.template
@@ -1,5 +1,6 @@
 aws_region = "ap-southeast-2"
-iam_role_arn = "arn:aws:iam::123456789012:role/TerraformBuilderRole"
+iam_role_arn = "arn:aws:iam::1234567890:role/TerraformBuilderRole"
+public_key_path="/tmp/test_rsa.pub"
 project = {
   substrate = {
     public_subnet_count = "3",
