adding ansible code and docs

--- a/configuration/ansible/roles/substrate-validator/defaults/main.yml
+++ b/configuration/ansible/roles/substrate-validator/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for susbtrate-validator
+# defaults file for substrate-validator
 proxy_port: 80
 p2p_port: 30333
 chain: "kusama"
